# mkdocs-test

./: .pre-commit-config.yaml  404.html  README.md  id_rsa  id_rsa.pub  index.html  mkdocs.yml  objects.inv  pyproject.toml
.devcontainer/: bash_aliases.sh  devcontainer.json  post_attach.sh  post_create.sh
.github/workflows/: build_docs.yaml  code_quality.yaml  gh-copy-mkdocs-to-repo.yaml  tests.yaml
docfile1/: index.html
docfile2/: index.html
docs/: conf.py  docfile1.md  docfile2.md  index.md  index.rst  preview.sh
docs/source/: about.md  api_main.rst  api_test.rst  architecture.md  data_quality.md  support.md  user_guide.md
mkdocs_test/: sample_script.py
search/: search_index.json
tests/: test_dummy.py
